# lotus-docker-sync

./: .gitignore  Cargo.toml  README.md  workflow-template.yml
.github/workflows/: build.yml
src/: auth.rs  config.rs  github.rs  main.rs  registry.rs
