[package]
name = "docker-sync-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docker-sync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dirs = "5.0"
base64 = "0.21"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"

[target.'cfg(windows)'.dependencies]
webbrowser = "1.0"